--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,3 +13,5 @@ bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
 set -g mouse on
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
+bind -n WheelDownPane select-pane -t= \; send-keys -M
